update websockets chat screen to hooks, fix styling

--- a/generators/app/templates/app/modules/chat/chat-screen.js.ejs
+++ b/generators/app/templates/app/modules/chat/chat-screen.js.ejs
@@ -1,117 +1,103 @@
-import React from 'react'
-import { View, Text, FlatList, TextInput } from 'react-native'
-import { KeyboardAwareScrollView } from 'react-native-keyboard-aware-scroll-view'
-import { connect } from 'react-redux'
+import React from 'react';
+import { View, Text, FlatList, TextInput } from 'react-native';
+import { connect } from 'react-redux';
 
-import { Colors } from '../../shared/themes'
-import WebsocketService from '../../shared/websockets/websocket.service'
-import { getLogin } from '../../shared/reducers/account.reducer'
-import ChatActions from './chat.reducer'
-import styles from './chat-screen.styles'
-import RoundedButton from '../../shared/components/rounded-button/rounded-button'
+import WebsocketService from '../../shared/websockets/websocket.service';
+import { getLogin } from '../../shared/reducers/account.reducer';
+import ChatActions from './chat.reducer';
+import styles from './chat-screen.styles';
+import RoundedButton from '../../shared/components/rounded-button/rounded-button';
 
-class ChatScreen extends React.PureComponent {
-  constructor (props) {
-    super(props)
-    this.state = {
-      message: '',
+function ChatScreen(props) {
+  const [message, setMessage] = React.useState('');
+  const { username, chat } = props;
+
+  React.useEffect(() => {
+    WebsocketService.connect();
+    return function cleanup() {
+      WebsocketService.disconnect();
+    };
+  }, []);
+
+  React.useEffect(() => {
+    if (username !== 'anonymoususer') {
+      WebsocketService.subscribeToChat();
     }
-  }
+  }, [username]);
 
-  renderRow ({ item }) {
+  const renderRow = ({ item }) => {
     return (
       <View style={styles.row}>
         <Text style={styles.boldLabel}>{item.user}</Text>
-        <Text style={styles.label}>{item.message}</Text>
+        <Text>{item.message}</Text>
       </View>
-    )
-  }
+    );
+  };
 
-  componentDidMount () {
-    WebsocketService.connect()
-    WebsocketService.subscribeToChat()
-  }
+  // componentDidUpdate(prevProps) {
+  //   this.;
+  // }
 
-  componentWillUnmount () {
-    WebsocketService.disconnect()
-  }
+  const updateMessage = (newMessage) => setMessage(newMessage);
 
-  componentDidUpdate(prevProps) {
-    this.chatList.scrollToEnd()
-  }
-
-  updateMessage = (message) => {
-    this.setState({ message })
-  }
-
-  sendMessage = () => {
-    if (this.state.message.length > 0) {
-      WebsocketService.sendChat({ user: this.props.username, message: this.state.message })
-      this.setState({ message: '' })
+  const sendMessage = () => {
+    if (message.length > 0) {
+      WebsocketService.sendChat({ user: username, message });
+      setMessage('');
     }
-  }
+  };
 
   // The default function if no Key is provided is index
   // an identifiable key is important if you plan on
   // item reordering.  Otherwise index is fine
-  keyExtractor = (item, index) => `${index}`
+  const keyExtractor = (item, index) => `${index}`;
 
   // How many items should be kept im memory as we scroll?
-  oneScreensWorth = 20
+  const oneScreensWorth = 21;
 
-  render () {
-    return (
-      <View style={styles.container} testID='chatScreen'>
-        <KeyboardAwareScrollView style={styles.scrollView} scrollEnabled={false} keyboardShouldPersistTaps="handled" keyboardDismissMode="on-drag">
-          <FlatList
-            ref={(c) => {
-              this.chatList = c
-            }}
-            style={styles.list}
-            contentContainerStyle={styles.listContent}
-            data={this.props.chat}
-            renderItem={this.renderRow}
-            keyExtractor={this.keyExtractor}
-            initialNumToRender={this.oneScreensWorth}
-            testID='chatScreenFlatList'
-          />
-          <View style={styles.inputContainer}>
-            <TextInput
-              ref={(c) => {
-                this.messageText = c
-              }}
-              placeholder='Type a message...'
-              placeholderTextColor={Colors.white}
-              underlineColorAndroid='transparent'
-              style={styles.messageInput}
-              value={this.state.message}
-              onChangeText={this.updateMessage}
-              autoCapitalize='none'
-              onSubmitEditing={this.sendMessage}
-              returnKeyType={'send'}
-              autoCorrect={false}
-              selectionColor={Colors.white}
-              testID='chatScreenInput'
-            />
-            <RoundedButton style={styles.button} onPress={this.sendMessage} text={'Send'} testID='chatScreenSendButton' />
-          </View>
-        </KeyboardAwareScrollView>
+  const memoizedChat = React.useMemo(() => [...chat].reverse(), [chat]);
+
+  return (
+    <View style={styles.container} testID="chatScreen">
+      <FlatList
+        style={styles.flex}
+        contentContainerStyle={styles.listContent}
+        data={memoizedChat}
+        inverted={true}
+        renderItem={renderRow}
+        keyExtractor={keyExtractor}
+        initialNumToRender={oneScreensWorth}
+        testID="chatScreenFlatList"
+      />
+      <View style={styles.inputContainer}>
+        <TextInput
+          placeholder="Type a message..."
+          style={styles.messageInput}
+          value={message}
+          onChangeText={updateMessage}
+          autoCapitalize="none"
+          onSubmitEditing={sendMessage}
+          returnKeyType={'send'}
+          autoCorrect={false}
+          testID="chatScreenInput"
+        />
+        <RoundedButton style={styles.button} onPress={sendMessage} text={'Send'} testID="chatScreenSendButton" />
       </View>
-    )
-  }
+    </View>
+  );
 }
 
 const mapStateToProps = (state) => {
   return {
     chat: state.chat.chat,
-    username: getLogin(state.account)
-  }
-}
+    username: getLogin(state.account),
+  };
+};
 
 const mapDispatchToProps = (dispatch) => {
   return {
-    resetChat: dispatch(ChatActions.chatReset())
-  }
-}
+    resetChat: dispatch(ChatActions.chatReset()),
+  };
+};
 
-export default connect(mapStateToProps, mapDispatchToProps)(ChatScreen)
+export default connect(mapStateToProps, mapDispatchToProps)(ChatScreen);
