--- a/generators/app/templates/app/modules/chat/chat-screen.styles.js.ejs
+++ b/generators/app/templates/app/modules/chat/chat-screen.styles.js.ejs
@@ -1,59 +1,36 @@
-import { StyleSheet } from 'react-native'
+import { StyleSheet } from 'react-native';
 
-import { ApplicationStyles, Metrics, Colors } from '../../shared/themes'
+import { ApplicationStyles, Metrics, Colors } from '../../shared/themes';
 
 export default StyleSheet.create({
   ...ApplicationStyles.screen,
-  container: {
-    backgroundColor: Colors.background,
-    flexDirection: 'column',
-    flex: 1
-  },
-  button: {
-    flex: 1
-  },
   row: {
-    backgroundColor: Colors.fire,
     marginVertical: 1,
-    justifyContent: 'center'
-  },
-  scrollView: {
-    left: 0,
-    right: 0,
-    bottom: 0,
-    top: 0
+    justifyContent: 'center',
   },
   boldLabel: {
     fontWeight: 'bold',
     alignSelf: 'center',
-    color: Colors.white,
     textAlign: 'center',
-    marginBottom: Metrics.smallMargin
-  },
-  label: {
-    textAlign: 'center',
-    color: Colors.white
-  },
-  list: {
-    flex: 1
+    marginBottom: Metrics.smallMargin,
   },
   listContent: {
     left: 0,
-    right: 0
+    right: 0,
   },
   messageInput: {
     flex: 1,
     padding: 10,
-    color: 'white',
+    backgroundColor: Colors.white,
     alignItems: 'flex-end',
     bottom: 0,
     left: 0,
-    right: 0
+    right: 0,
   },
   inputContainer: {
-    flex: 1,
     flexDirection: 'row',
     justifyContent: 'center',
-    alignItems: 'center'
-  }
-})
+    alignItems: 'center',
+    paddingBottom: 20,
+  },
+});
