use custom conf instead of prepackaged

--- a/generators/app/templates/README.md.ejs
+++ b/generators/app/templates/README.md.ejs
@@ -73,7 +73,7 @@ See the example end-to-end test in [`e2e/home-screen.spec.js`](e2e/home-screen.s
 To run the e2e tests:
 
 ```bash
-npm run e2e
+npm run test:e2e
 ```
 <%_ } _%>
 ## Tips
