--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -15,7 +15,8 @@
     "precommit": "lint-staged",
     <%_ } _%>
     <%_ if (context.detox) { _%>
-    "e2e": "./e2e/download-expo.sh && detox test --configuration ios.sim.debug",
+    "start:e2e": "expo start --config e2e/expo.conf.js",
+    "test:e2e": "./e2e/download-expo.sh && detox test --configuration ios.sim.debug",
     <%_ } _%>
     "postinstall": "patch-package",
     "prettier": "prettier --write \"{,.,**/,.jhipster/**/}*.{md,json,yml,js,ts,tsx}\""
