--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -15,7 +15,7 @@
     "precommit": "lint-staged",
     <%_ } _%>
     <%_ if (context.detox) { _%>
-    "start:e2e": "expo start --config e2e/expo.conf.js",
+    "start:e2e": "expo start --no-dev --no-minify",
     "test:e2e": "./e2e/download-expo.sh && detox test --configuration ios.sim.debug",
     <%_ } _%>
     "postinstall": "patch-package",
