add e2e setup script to bundle before tests

--- a/generators/app/templates/e2e/scripts/download-expo.sh.ejs
+++ b/generators/app/templates/e2e/scripts/download-expo.sh.ejs
@@ -1,4 +1,4 @@
-#!/bin/bash -e
+#!/usr/bin/env bash
 
 set -euo pipefail
 # based on https://github.com/infinitered/ignite/blob/a7eade35a46e19bfa7bb28c2aa595d070e79a0a0/boilerplate/bin/downloadExpoApp.sh
