--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -15,8 +15,8 @@
     "precommit": "lint-staged",
     <%_ } _%>
     <%_ if (context.detox) { _%>
-    "start:e2e": "expo start --no-dev --no-minify",
-    "test:e2e": "./e2e/download-expo.sh && detox test --configuration ios.sim.debug",
+    "start:e2e": "expo start --no-dev --minify",
+    "test:e2e": "./e2e/scripts/setup.sh && detox test --configuration ios.sim.debug",
     <%_ } _%>
     "postinstall": "patch-package",
     "prettier": "prettier --write \"{,.,**/,.jhipster/**/}*.{md,json,yml,js,ts,tsx}\""
