--- a/generators/app/templates/app/navigation/nav-container.js.ejs
+++ b/generators/app/templates/app/navigation/nav-container.js.ejs
@@ -81,6 +81,7 @@ export const drawerScreens = [
     name: 'Chat',
     route: 'chat',
     component: ChatScreen,
+    auth: true,
   },
   <%_ } _%>
 ];
