--- a/generators/app/templates/package.json.ejs
+++ b/generators/app/templates/package.json.ejs
@@ -38,7 +38,7 @@
     "reduxsauce": "REPLACE_WITH_VERSION",
     "seamless-immutable": "REPLACE_WITH_VERSION",
     <%_ if (context.websocket) { _%>
-    "stompjs": "REPLACE_WITH_VERSION",
+    "webstomp-client": "REPLACE_WITH_VERSION",
     "sockjs-client": "REPLACE_WITH_VERSION",
     "net": "REPLACE_WITH_VERSION",
     <%_ } _%>
